# ZeroTokenRouter

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-runtime.txt
.github/workflows/: pages.yml  publish.yml  test.yml
data/: difficult_eval.json  hackathon_doc_tasks.json  practice_tasks.json  simulated_eval.json  smoke_local.json
docs/: demo-script.md  presentation_deck.md  slides.md  video_script.md
docs/site/: index.html
scripts/: build_deck.py  download_model.py  evaluate.py
src/tokenrouter/: __init__.py  agent.py  backends.py  classifier.py  config.py  fast_answers.py  prompts.py  routing.py  solvers.py  types.py  verification.py
tests/: test_agent.py  test_backends.py  test_classifier.py  test_config.py  test_evaluate.py  test_fast_answers.py  test_routing.py  test_solvers.py
tools/: mock_fireworks_server.py
